FIX: Add spacing for navigation

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -44,3 +44,6 @@
         display:inline-block;
     }
 }
+#main-outlet{
+    padding-bottom:85px;
+}
